<resources>
    <string name="app_name">AuthAndExtrasDemo</string>
    <string name="user_edit_text_hint">User</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_edit_text_hint">Title</string>
    <string name="multiline_edit_text_hint">Content</string>
    <string name="signin_with_google_text">Log in with Google</string>
    <string name="signin_with_facebook_text">Log in with Facebook</string>
    <string name="facebook_app_id">595677364447843</string>
    <string name="fb_login_protocol_scheme">fb595677364447843</string>
</resources>